--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     margin: 10px;
     padding: 10px;
     height: auto;
-    color: rgb(221, 152, 221);
+    background-color: rgb(221, 152, 221);
 }
 hr {
     color: rgb(62, 7, 114);
